[package]
name = "space-filler"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2021"
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
num-traits = "0.2"
quickcheck = "1.0"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
